fix contact list, fix contact's search + dark mode classes

--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,48 @@ footer .search {
   font-size: 11px;
   color: #b1b1b1;
 }
+
+/*!!!!!!!! - DARK MODE - !!!!!!!! */
+
+#dark.body {
+  background-color: #0a0f12;
+  color: #b1b1b1;
+}
+
+.dark.box {
+  background-color: #141d22;
+}
+
+.dark.notification {
+  background-color: #095474;
+}
+
+.dark.notification i {
+  color: #095474;
+  background-color: #8eb2be;
+}
+
+.dark.search-bar {
+  background-color: #33383a;
+}
+
+.dark.chatbox {
+  background-image: url(../img/mine-dark.jpg);
+}
+
+.message-box.dark.sent .message {
+  background-color: #066263;
+  margin-right: 2rem;
+}
+
+.message-box.dark.received .message {
+  background-color: #272e32;
+}
+
+#chats.dark li:hover {
+  background-color: #33383a;
+}
+
+.dark.text-bg {
+  background-color: #33383a;
+}
